--- a/OceanPlastic/Packages/manifest.json
+++ b/OceanPlastic/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.adaptiveperformance.google.android": "1.3.1",
+    "com.unity.adaptiveperformance.samsung.android": "5.0.0",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.2d": "2.0.0",
@@ -8,6 +10,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.shadergraph": "14.0.11",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
