feat: core repair minigame mechanics

--- a/OceanPlastic/Packages/manifest.json
+++ b/OceanPlastic/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.postprocessing": "3.4.0",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.shadergraph": "14.0.11",
+    "com.unity.splines": "2.6.1",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.6",
